# piphoneIO

./: CMakeLists.txt  LICENSE  README.md  hardrun.sh  run.sh
include/: piphone.hpp
src/: audio.cpp  audio.hpp  font.cpp  font.hpp  globaldata.hpp  main.cpp  piphone.cpp  utils.cpp  utils.hpp
src/io/: display.cpp  display.hpp  font.cpp  font.hpp  globaldata.hpp  input.cpp  io.hpp
src/menus/: HomeMenu.hpp  ListMenu.hpp  Menu.cpp  Menu.hpp  StopwatchMenu.hpp  YouTubeMenu.cpp  YouTubeMenu.hpp
tests/: test.cpp
